--- a/main.html
+++ b/main.html
@@ -10,6 +10,10 @@
 	<!-- the entire body must be written by student -->
 	
 
+	<div id="text";text="Welcome to the world of Web development"
+	</div>
+	
+
 
     <script type="text/javascript" src="./script.js">
 </script>
