--- a/main.html
+++ b/main.html
@@ -10,7 +10,8 @@
 	<!-- the entire body must be written by student -->
 	
 
-	<div id="text";text="Welcome to the world of Web development"
+	<div id="text">
+		Welcome to the world of Web development
 	</div>
 	
 
